Se agregan estilos y se cambia el action del form

--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <h1 id="titulo">Dolores Lavalle de Lavalle</h1>
         <img src="Escudo.png" class="logo" width="200" height="200"/>
         <div class="name">
-            <form action="/formulario" method="post">
+            <form action="index.html" method="post">
                 <label for="nombre">Nombre</label>
                 <input type="text" id="nombre" placeholder="Ingrese su nombre" />
                 <br>
@@ -42,7 +42,7 @@
                 <br>
                 <br>
                 <!--LO MISMO CON ESTE ENLACE, DEBERIA CONECTAR A UNA BASE DE DATOS QUE PERMITA ABRIR OTRO FORMULARIO-->
-                <a href="">¿Necesitas Ayuda?</a>
+                <a href = "ayuda.html">¿Necesitas Ayuda?</a>
             </form>
         </div>
 </body>
