Se modifica get por post en formulario

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 id="titulo">Dolores Lavalle de Lavalle</h1>
         <img src="Escudo.png" class="logo" width="200" height="200"/>
         <div class="name">
-            <form action="main.html" method="post">
+            <form action="main.html" method="get">
                 <label for="nombre">Nombre</label>
                 <input type="text" id="nombre" placeholder="Ingrese su nombre" />
                 <br>
@@ -30,8 +30,8 @@
                     <input type="radio" id="profesor">
                 </div>
                 <div class="teacher">
-                <label for="profesor">Soy profesor</label>
-                <input type="radio" id="alumno">
+                    <label for="profesor">Soy profesor</label>
+                    <input type="radio" id="alumno">
                 </div>
                 <br>
                 <br>
