--- a/main.html
+++ b/main.html
@@ -8,16 +8,20 @@
 </head>
 <body>
   <header>
-    <ul>
-      <li>Inicio</li>
-      <li>Productos</li>
-      <li>Quienes somos</li>
-      <li>Contacto</li>
-    </ul>
+    <nav>
+      <ul>
+        <li>Inicio</li>
+        <li>Productos</li>
+        <li>Quienes somos</li>
+        <li>Contacto</li>
+      </ul>
+    </nav>
   </header>
+
   <main>
 
   </main>
+  
   <footer>
     Todos los derechos reservados
   </footer>
