--- a/index.html
+++ b/index.html
@@ -11,38 +11,39 @@
 
       <h1 id="titulo">Dolores Lavalle de Lavalle</h1>
 
-      <img src="Escudo.png" class="logo" width="200" height="200"/>
+      <img src="Escudo.png" class="logo" alt = "Escudo"/>
 
       <div class = "form-container">
           <form action="main.html" method="get">
-              <label for="nombre">Nombre</label>
-              <input type="text" id="nombre" placeholder="Ingrese su nombre" />
-
-
-              <div class="lastname">
-                  <label for="apellido">Apellido</label>
-                  <input type="text" id="apellido" placeholder="Ingrese su apellido">
+              <div class = "form-group">
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" placeholder="Ingrese su nombre" />
               </div>
-              <br>
-              <div class="pass">
-                  <label for="Contrase&ntilde;a">Contrase&ntilde;a</label>
+
+              <div class="form-group">
+                <label for="apellido">Apellido:</label>
+                <input type="text" id="apellido" placeholder="Ingrese su apellido">
+              </div>
+
+              <div class="form-group">
+                  <label for="Contrase&ntilde;a">Contrase&ntilde;a:</label>
                   <input type="password" id="Contrase&ntilde;a" placeholder="Ingrese su Contrase&ntilde;a">
               </div>
               <br>
               <div class="radio">
-                  <label for="alumno">Soy alumno</label>
-                  <input type="radio" id="profesor">
-                  <label for="profesor">Soy profesor</label>
-                  <input type="radio" id="alumno">
+                  <input type="radio" id="profesor" name = "tipo">
+                  <label for="alumno">Soy profesor</label>
+                  <input type="radio" id="alumno" name = "tipo">
+                  <label for="profesor">Soy alumno</label>
               </div>
               <br>
               <br>
-              <!--ACA ARRANCA EL ENVIO DE FORMULARIO QUE NECESITA UNA CONEXION A BASE DE DATO-->
-              <button type="submit">Enviar</button>
-              <button type="reset">Resetear</button>
-              <br>
-              <br>
-              <br>
+
+              <div class="button-group">
+                  <button type="submit">Enviar</button>
+                  <button type="reset">Resetear</button>
+              </div>
+
               <!--LO MISMO CON ESTE ENLACE, DEBERIA CONECTAR A UNA BASE DE DATOS QUE PERMITA ABRIR OTRO FORMULARIO-->
               <a href = "ayuda.html">¿Necesitas Ayuda?</a>
           </form>
